<resources>
    <string name="app_name">RideShare</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="log_in_button">Log In</string>
    <string name="email_textinput">Email</string>
    <string name="password_textinput">Password</string>
    <string name="email_address_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="tab_text_1">Trips</string>
    <string name="tab_text_2">Friends</string>
    <string name="tab_text_3">History</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="username">Username</string>
    <string name="username_hint">Username</string>
    <string name="name_hint">Name</string>
</resources>
